--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
     "pg": "^7.4.3",
     "sequelize": "^4.37.10",
     "socket.io": "^2.1.1"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0",
+    "supertest": "^3.1.0"
   }
 }
