--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "a web app for golfers and golf courses",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start-server": "nodemon server -e html,js,css --ignore public --ignore client",
     "start-dev": "NODE_ENV='development' npm run start-server",
-    "seed": "node script/seed.js"
+    "seed": "node script/seed.js",
+    "test": "NODE_ENV='test' mocha ./server/**/*.spec.js ./server/**/**/*.spec.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "pg": "^7.4.3",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^4.37.10",
     "socket.io": "^2.1.1"
   },
