--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "connect-session-sequelize": "^5.2.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "lodash": "^4.17.10",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "pg": "^7.4.3",
