forgot to switch branches, or commit for that matter, way too much in this commit, but post routes done and lots of model tests written

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start-server": "nodemon server -e html,js,css --ignore public",
     "start-dev": "NODE_ENV='development' npm run start-server",
     "seed": "node script/seed/index.js",
-    "test": "NODE_ENV='test' mocha ./server/**/*.spec.js ./server/**/**/*.spec.js --exit"
+    "test": "NODE_ENV='test' mocha ./server/**/*.spec.js ./server/**/**/*.spec.js ./server/**/**/**/*.spec.js --exit"
   },
   "repository": {
     "type": "git",
