--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "pg": "^7.4.3",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "sequelize": "^4.37.10",
     "socket.io": "^2.1.1"
   },
