--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build-client": "webpack -p",
     "build-client-watch": "webpack -w",
+    "deploy": "script/deploy",
     "start-server": "nodemon server -e html,js,css --ignore public",
     "start-dev": "NODE_ENV='development' npm run build-client-watch & npm run start-server",
     "seed": "node script/seed/index.js",
