--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "compression": "^1.7.2",
     "connect-session-sequelize": "^5.2.1",
     "express": "^4.16.3",
+    "express-graphql": "^0.6.12",
     "express-session": "^1.15.6",
+    "graphql": "^14.0.2",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "pg": "^7.4.3",
