graphql basic running

--- a/package.json
+++ b/package.json
@@ -24,14 +24,18 @@
   },
   "homepage": "https://github.com/davidfudacz/clubb-courses-api#readme",
   "dependencies": {
+    "apollo-server": "^2.1.0",
+    "apollo-server-express": "^2.1.0",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "compression": "^1.7.2",
     "connect-session-sequelize": "^5.2.1",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "express-session": "^1.15.6",
     "graphql": "^14.0.2",
+    "graphql-tools": "^4.0.0",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "pg": "^7.4.3",
